Fixed Cards Img Alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -193,6 +193,14 @@ u {
     display: inline-flex;
 }
 
+/* ALL CARDS ON THE PAGE */
+/* OBJECT_FIT FROM W3-SCHOOLS */
+.card .card-image img {
+    object-fit: contain;
+    width: 100%;
+    height: 280px;
+}
+
 /* ADD MODEL.HTML */
 .add-model-container {
     background-color: rgb(243, 247, 241);
